// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="expenses-summary"
>
  <p>
    Viewing 1 expense totalling $1,001.00
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="expenses-summary"
>
  <p>
    Viewing 33 expenses totalling $77,777,777,777.00
  </p>
</div>
`;
